# uni-gpu-computing

./: .gitignore
01-c/: main.c
01-c/ex1/: makefile  stack_n_heap.c
01-c/ex2/: batch_script  get_time_test.c  makefile
02-slurm/: job_0.sbatch  print_host.c  program.c
03-timing/: Makefile
04-cuda/: 02-add-n.cu  03-access-pattern.cu  04-prop.cu  gpu-run.sbatch
04-gpu/: .gitignore  00-helloCUDA.cu  01-test.cu  02-add-n.cu  03-access-pattern.cu  04-prop.cu  gpu-run.sbatch  runner.sh
05-mpi/: 00-hello_mpi.c  01-send.c  02-time.c  03-sum-array.c  04-bfs.c
06-multi-gpu/multiGPU-SpMV/: SpMV.cpp  example_gpuassignment.cu  example_parser.cpp  example_read.cpp  exercise_1.cpp  makefile
07-hackaton/: .gitignore  .gitmodules  Makefile  README.md  baldo_sync.sh  config.yaml  env.sh  run_experiments.sh  run_local_experiments_and_analyse.sh  submit_results.sh
07-hackaton/MtxMan/: .gitignore  .gitmodules  README.md  TODO.md  config.example.yaml  environment.yml  requirements.txt
07-hackaton/SbatchMan/: .gitignore  README.md  initEnv.sh  newExperiment.sh  submit.sh
07-hackaton/distributed_mmio/: .gitignore  CMakeLists.txt  README.md  TODO.md
07-hackaton/distributed_mmio/cmake/: distributed_mmioConfig.cmake.in
07-hackaton/distributed_mmio/include/: mmio.h  mmio_utils.h
07-hackaton/distributed_mmio/src/: mmio.cpp  mmio_utils.cpp  mtx_to_bmtx.cpp
07-hackaton/include/: bfs_baseline.cuh  cli.hpp  colors.h  graph.h  mt19937-64.hpp  utils.cuh
lesson1/: Makefile
lesson3/: main.c
lesson5/: 00-helloCUDA.cu  01-test.cu  05-access-thread-cont.cu  runner.sh
(+56 files in other folders)
